k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-messenger
  labels:
    name: grpc-messenger
